Thu Apr 08 12:11:20 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/raiseerror.c: improved

Wed Apr 07 09:58:40 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsiconv.h src/dblib/bcp.c:
	* src/server/login.c src/tds/iconv.c src/tds/login.c:
	* src/tds/query.c src/tds/read.c src/tds/token.c:
	* src/tds/write.c src/tds/unittests/utf8_2.c:
	- fixed macro definition

Tue Apr 06 10:26:20 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/raiseerror.c: improved

Mon Apr  5 17:52:47 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c added comments about timestamp

Mon Apr 05 17:37:00 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/raiseerror.c src/tds/token.c:
	- fix problem with RAISERROR

Mon Apr  5 03:18:39 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* src/apps/Makefile.am src/apps/bsqldb.c
	- added bsqldb

Sun Apr 04 17:55:32 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO src/dblib/dbutil.c:
	- consistency check for headers

Sat Apr  3 13:30:02 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/docs.html added links to other documentation

Thu Apr 01 20:46:47 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* TODO: update
	* include/sybdb.h: fix for PHP

Thu Apr 01 20:29:01 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- applied Bill Thompson patch on DONE handling

Wed Mar 31 20:51:38 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/convert.c src/tds/numeric.c:
	* src/tds/token.c:
	- workaround for ASA 7 and nullable integer
	* src/odbc/unittests/error.c: fix for Sybase

Tue Mar 30 17:24:24 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/error.c(added):
	- add error for error in a row

Sun Mar 28 20:44:52 CET 2004    Frediano Ziglio <freddy77@angelfire.com>